--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,6 @@ dependencies:
     flutter_inappwebview: ^6.1.5
     flutter_svg: ^2.0.10
     # flutter_local_notifications: ^18.0.1
-    flutter_native_timezone: ^2.0.0
     flutter_markdown: ^0.7.6
     flutter_native_splash: ^2.4.4
     flutter_web_auth_2: ^4.0.2
@@ -104,6 +103,7 @@ dependencies:
     auto_size_text: ^3.0.0
     vibration: ^3.1.5
     palette_generator: ^0.3.3+7
+    flutter_timezone: ^5.0.1
 
 dev_dependencies:
     build_runner: ^2.4.11
