--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,9 @@ dependencies:
     vibration: ^3.1.5
     palette_generator: ^0.3.3+7
     better_player_plus: any
+    flutter_local_notifications: ^17.0.0
+    workmanager: ^0.9.0+3
+    timezone: ^0.9.0
 
 dev_dependencies:
     build_runner: ^2.4.11
