--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,6 +110,7 @@ dependencies:
 dev_dependencies:
     build_runner: ^2.4.11
     change_app_package_name: ^1.4.0
+    isar_community_generator: ^3.3.0-dev.3
     flutter_lints: ^3.0.0
     flutter_test:
         sdk: flutter
