--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -94,6 +94,34 @@
             <category android:name="android.intent.category.BROWSABLE" />
             <data android:scheme="aniyomi" android:host="add-repo" />
         </intent-filter>  
+
+        <intent-filter android:label="Open Media Link">
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="anymex" android:host="anilist" />
+            <data android:scheme="anymex" android:host="mal" />
+            <data android:scheme="anymex" android:host="myanimelist" />
+            <data android:scheme="anymex" android:host="simkl" />
+        </intent-filter>
+
+        <intent-filter android:label="Open Tracking Service Link">
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="https" android:host="anilist.co" />
+            <data android:scheme="https" android:host="www.anilist.co" />
+            <data android:scheme="http" android:host="anilist.co" />
+            <data android:scheme="http" android:host="www.anilist.co" />
+            <data android:scheme="https" android:host="myanimelist.net" />
+            <data android:scheme="https" android:host="www.myanimelist.net" />
+            <data android:scheme="http" android:host="myanimelist.net" />
+            <data android:scheme="http" android:host="www.myanimelist.net" />
+            <data android:scheme="https" android:host="simkl.com" />
+            <data android:scheme="https" android:host="www.simkl.com" />
+            <data android:scheme="http" android:host="simkl.com" />
+            <data android:scheme="http" android:host="www.simkl.com" />
+        </intent-filter>
         
         </activity>
 
